test/corpus/primitives.txt
================================================================================
Simple key-value with string
================================================================================
name: Alice
--------------------------------------------------------------------------------

(document
  (object
    (pair
      key: (key
        (identifier))
      value: (unquoted_string))))

================================================================================
Simple key-value with number
================================================================================
age: 30
--------------------------------------------------------------------------------

(document
  (object
    (pair
      key: (key
        (identifier))
      value: (number))))

================================================================================
Simple key-value with boolean true
================================================================================
active: true
--------------------------------------------------------------------------------

(document
  (object
    (pair
      key: (key
        (identifier))
      value: (true))))

================================================================================
Simple key-value with boolean false
================================================================================
enabled: false
--------------------------------------------------------------------------------

(document
  (object
    (pair
      key: (key
        (identifier))
      value: (false))))

================================================================================
Simple key-value with null
================================================================================
value: null
--------------------------------------------------------------------------------

(document
  (object
    (pair
      key: (key
        (identifier))
      value: (null))))

================================================================================
Quoted string value
================================================================================
name: "Hello World"
--------------------------------------------------------------------------------

(document
  (object
    (pair
      key: (key
        (identifier))
      value: (quoted_string))))

================================================================================
Quoted string with escape sequences
================================================================================
text: "line1\nline2"
--------------------------------------------------------------------------------

(document
  (object
    (pair
      key: (key
        (identifier))
      value: (quoted_string
        (escape_sequence)))))

================================================================================
Multiple key-value pairs
================================================================================
name: Alice
age: 30
active: true
--------------------------------------------------------------------------------

(document
  (object
    (pair
      key: (key
        (identifier))
      value: (unquoted_string))
    (pair
      key: (key
        (identifier))
      value: (number))
    (pair
      key: (key
        (identifier))
      value: (true))))

================================================================================
Negative number
================================================================================
balance: -100
--------------------------------------------------------------------------------

(document
  (object
    (pair
      key: (key
        (identifier))
      value: (number))))

================================================================================
Floating point number
================================================================================
price: 19.99
--------------------------------------------------------------------------------

(document
  (object
    (pair
      key: (key
        (identifier))
      value: (number))))

================================================================================
Scientific notation
================================================================================
mass: 6.022e23
--------------------------------------------------------------------------------

(document
  (object
    (pair
      key: (key
        (identifier))
      value: (number))))
